# poseidon

./: .ccls  .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  check_includes.sh  clean_var.sh  compile_flags.txt  configure.ac  dep_makedeb_mysql-client.sh  install_mongo-c-driver.sh  makedeb.sh  makedeb_checkinstall.sh  makedeb_dep_mongo-c-driver.sh  makedeb_dep_mysql-client.sh  makedeb_mongo-c-driver.sh  makedeb_mysql-client.sh  meson.build  meson.options  start_debug.sh  start_release.sh  update_submodule.sh
.github/workflows/: c-cpp.yml  ci.yml  codeql.yml
DEBIAN/: control
etc/: Makefile.inc.am
etc/poseidon/: main.conf
example/: Makefile.inc.am  http_client.cpp  http_server.cpp  https_client.cpp  https_server.cpp  hws_server.cpp  hwss_server.cpp  ssl_client.cpp  ssl_echo.cpp  ssl_echo_server.cpp  tcp_client.cpp  tcp_echo.cpp  tcp_echo_server.cpp  timer.cpp  udp_client.cpp  udp_echo.cpp  udp_echo_server.cpp  ws_client.cpp  ws_server.cpp  wss_client.cpp  wss_server.cpp
poseidon/: Makefile.inc.am  easy_ssl_client.hpp  easy_ssl_server.hpp  easy_tcp_client.hpp  easy_tcp_server.hpp  easy_udp_client.hpp  easy_udp_server.hpp  fwd.cpp  fwd.hpp  geometry.cpp  geometry.hpp  main.conf  main.cpp  precompiled.hpp  precompiled.ipp  utils.cpp  utils.hpp  version.h.in  xprecompiled.hpp
poseidon/base/: abstract_async_task.cpp  abstract_async_task.hpp  abstract_deflator.cpp  abstract_deflator.hpp  abstract_inflator.cpp  abstract_inflator.hpp  abstract_task.cpp  abstract_task.hpp  abstract_timer.cpp  abstract_timer.hpp  appointment.cpp  appointment.hpp  char256.cpp  char256.hpp  charbuf_256.hpp  config_file.cpp  config_file.hpp  datetime.cpp  datetime.hpp  deflator.cpp  deflator.hpp  enums.hpp  inflator.cpp  inflator.hpp  thunk.hpp  uuid.cpp  uuid.hpp
poseidon/details/: error_handling.hpp  mongo_fwd.hpp  mysql_fwd.hpp  openssl_fwd.hpp  redis_fwd.hpp  trigonometry.hpp  zlib_fwd.hpp
poseidon/easy/: easy_deflator.cpp  easy_deflator.hpp  easy_http_client.cpp  easy_http_client.hpp  easy_http_server.cpp  easy_http_server.hpp  easy_https_client.cpp  easy_https_client.hpp  easy_https_server.cpp  easy_https_server.hpp  easy_hws_server.cpp  easy_hws_server.hpp  easy_hwss_server.cpp  easy_hwss_server.hpp  easy_inflator.cpp  easy_inflator.hpp  easy_ssl_client.cpp  easy_ssl_client.hpp  easy_ssl_server.cpp  easy_ssl_server.hpp  easy_tcp_client.cpp  easy_tcp_client.hpp  easy_tcp_server.cpp  easy_tcp_server.hpp  easy_timer.cpp  easy_timer.hpp  easy_udp_client.cpp  easy_udp_client.hpp  easy_udp_server.cpp  easy_udp_server.hpp  easy_ws_client.cpp  easy_ws_client.hpp  easy_ws_server.cpp  easy_ws_server.hpp  easy_wss_client.cpp  easy_wss_client.hpp  easy_wss_server.cpp  easy_wss_server.hpp  enums.hpp
poseidon/fiber/: abstract_fiber.cpp  abstract_fiber.hpp  abstract_future.cpp  abstract_future.hpp  dns_future.cpp  dns_future.hpp  dns_query_future.cpp  dns_query_future.hpp  enums.hpp  future.hpp  mongo_query_future.cpp  mongo_query_future.hpp  mysql_check_table_future.cpp  mysql_check_table_future.hpp  mysql_query_future.cpp  mysql_query_future.hpp  read_file_future.cpp  read_file_future.hpp  redis_query_future.cpp  redis_query_future.hpp  redis_scan_and_get_future.cpp  redis_scan_and_get_future.hpp
poseidon/http/: enums.hpp  http_c_headers.cpp  http_c_headers.hpp  http_datetime.cpp  http_datetime.hpp  http_field_name.cpp  http_field_name.hpp  http_header.cpp  http_header_parser.cpp  http_header_parser.hpp  http_query_parser.cpp  http_query_parser.hpp  http_request_headers.cpp  http_request_headers.hpp  http_request_parser.cpp  http_request_parser.hpp  http_response_headers.cpp  http_response_headers.hpp  http_response_parser.cpp  http_response_parser.hpp  http_s_headers.cpp  http_s_headers.hpp  http_value.cpp  http_value.hpp  websocket_compositor.cpp  websocket_compositor.hpp  websocket_deflator.cpp  websocket_deflator.hpp  websocket_frame_header.cpp  websocket_frame_header.hpp  websocket_frame_parser.cpp  websocket_frame_parser.hpp  websocket_parser.cpp  websocket_parser.hpp
poseidon/mongo/: enums.hpp  mongo_connection.cpp  mongo_connection.hpp  mongo_value.cpp  mongo_value.hpp
poseidon/mongodb/: mongodb_connection.cpp  mongodb_connection.hpp
poseidon/mysql/: enums.hpp  mysql_connection.cpp  mysql_connection.hpp  mysql_table.cpp  mysql_table.hpp  mysql_table_column.cpp  mysql_table_column.hpp  mysql_table_index.cpp  mysql_table_index.hpp  mysql_table_structure.cpp  mysql_table_structure.hpp  mysql_value.cpp  mysql_value.hpp
poseidon/redis/: enums.hpp  redis_connection.cpp  redis_connection.hpp  redis_value.cpp  redis_value.hpp
poseidon/socket/: abstract_socket.cpp  abstract_socket.hpp  async_connect.cpp  async_connect.hpp  dns_connect_task.cpp  dns_connect_task.hpp  enums.hpp  http_client_session.cpp  http_client_session.hpp  http_server_session.cpp  http_server_session.hpp  https_client_session.cpp  https_client_session.hpp  https_server_session.cpp  https_server_session.hpp  ipv6_address.cpp  ipv6_address.hpp  listen_socket.cpp  listen_socket.hpp  openssl_fwd.hpp  socket_address.cpp  socket_address.hpp  ssl_ctx_ptr.hpp  ssl_ptr.hpp  ssl_socket.cpp  ssl_socket.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp  ws_client_session.cpp  ws_client_session.hpp  ws_server_session.cpp  ws_server_session.hpp  wss_client_session.cpp  wss_client_session.hpp  wss_server_session.cpp  wss_server_session.hpp
poseidon/src/: fwd.cpp  geometry.cpp  main.cpp  utils.cpp  xprecompiled.hpp
poseidon/static/: async_logger.cpp  async_logger.hpp  async_task_executor.cpp  fiber_scheduler.cpp  (+26 more)
test/: Makefile.inc.am  datetime.cpp  deflator.cpp  geometry.cpp  http_datetime.cpp  http_field_name.cpp  http_header_parser.cpp  http_query_parser.cpp  http_value.cpp  inflator.cpp  ipv6_address.cpp  mongo_connection.cpp  mongo_value.cpp  mysql_connection.cpp  mysql_table.cpp  mysql_table_structure.cpp  mysql_value.cpp  redis_connection.cpp  redis_value.cpp  socket_address.cpp  utils.cpp  utils.hpp  uuid.cpp  websocket_frame_header.cpp  websocket_handshake.cpp
(+85 files in other folders)
